--- a/infa.html
+++ b/infa.html
@@ -24,4 +24,4 @@
       <footer></footer>
     </section>
   </article>
-  <audio src="хава.mp3" controls autoplay="autoplay"></audio>
+  <audio src="хава.mp3"></audio>
