--- a/infa.html
+++ b/infa.html
@@ -21,7 +21,7 @@
         с одной стороны я долбаеб, а с другой стороны у меня затылок
         <br/>
       </div>
-	      <audio src="хава.mp3"></audio>
+	      <audio src="хава.mp3" controls autoplay="autoplay"></audio>
       <footer></footer>
     </section>
   </article>
