--- a/infa.html
+++ b/infa.html
@@ -22,6 +22,6 @@
         <br/>
       </div>
       <footer></footer>
-	    <audio src="хава.mp3" controls autoplay="autoplay"></audio>
+	    <audio src="assets/img/хава.mp3" controls autoplay="autoplay"></audio>
     </section>
   </article>
