--- a/participants.html
+++ b/participants.html
@@ -93,16 +93,16 @@
 
             <div class="NGB">
                 <img src="assets/img/Вова.jpg">
-              <p>Человек, у которого есть Крым, гений в плане географии, а также знаток орать на людей, если ему что-то не понравиться</p>
+              <p>Гений в плане географии, а также знаток орать на людей, если ему что-то не понравиться</p>
               <p>Особенности: есть Крым</p>
               <p>Недостатки: их нет</p>
             </div>
 
             <div class="NGB">
                 <img src="assets/img/Ульяна.jpg">
-              <p>Главная девушка в этой группе, которая застряла на кухне и у неё не отобрали интернет</p>
+              <p>Главная девушка в этой группе</p>
               <p>Особенности: Женщина</p>
-              <p>Недостатки: Женщина</p>
+              <p>Недостатки: Их нет</p>
             </div>
 
               </div>
